deploy: f2aa5eda293196eb43481680ddd6be033805bdcb

--- a/README.html
+++ b/README.html
@@ -208,6 +208,10 @@
       
     </ul>
   
+    <p class='mb-3'>
+      Checkout <a href='https://note.ema.srid.ca/examples' class='text-red-600 hover:underline' target='_blank' rel='noopener'>examples</a> and <a href='https://note.ema.srid.ca/demo' class='text-red-600 hover:underline' target='_blank' rel='noopener'>demo</a> for next steps.
+    </p>
+  
 </article>
             
   <div class='p-4 mt-8 bg-gray-100 rounded'>
